gke-clusterfederation/ingress/frontend-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: federation
  name: frontend
spec:
  backend:
    serviceName: frontend
    servicePort: 80
