gke-clusterfederation/ingress/healtcheck.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-healthcheck-ingress
spec:
  backend:
    serviceName: nginx-healthcheck
    servicePort: 80
